[project]
name = "graph-agent"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.5",
    "aiokafka>=0.13.0",
    "asyncpg>=0.31.0",
    "loguru>=0.7.3",
    "psutil>=7.2.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.49",
]
